2018-05-19  John Ericson  <john.ericson@obsidian.systems>

	* config.sub: Cordon off single component aliases.

2018-05-14  Ben Elliston  <bje@gnu.org>

	* Makefile (shellcheck): Include testsuite/*.sh scripts.

2018-05-14  John Ericson  <john.ericson@obsidian.systems>

	* config.sub: Don't prepend $os with '-' everywhere. Include it in
	the output instead.

2018-05-13  John Ericson  <john.ericson@obsidian.systems>

	* config.sub: Error if there is more than four components.

2018-05-12  Ben Elliston  <bje@gnu.org>

	* config.sub: Remove do-nothing case.

2018-05-05  Ben Elliston  <bje@gnu.org>

	* config.sub: Simplify an if expression.

2018-05-05  John Ericson  <john.ericson@obsidian.systems>

	* config.sub (arm*-*-none-eabi): Recognise.

2018-05-05  Ben Elliston  <bje@gnu.org>

	* config.sub: Pass the -r option to 'read'.

2018-05-05  John Ericson  <john.ericson@obsidian.systems>

	* config.sub: Properly recognise configuration types with four
	components. Re-work the old logic to simplify the shell code.

2018-05-04  Ben Elliston  <bje@gnu.org>

	* Makefile (shellcheck): New.

2018-05-01  Ben Elliston  <bje@gnu.org>

	* config.sub (maybe_os): Reindent this block.

2018-05-01  John Ericson  <john.ericson@obsidian.systems>

	* config.sub: Rewrite basic_machine 'if' with 'case'.

2018-05-01  Francois H. Theron  <francois.theron@netronome.com>
	    Ben Elliston  <bje@gnu.org>

	* config.sub (nfp, nfp-*): New.
	* testsuite/config-sub.data: Add test cases.

2018-04-24  John Ericson  <john.ericson@obsidian.systems>

	* config.sub (arm6m, armv[78][arm]): Recognise.
	* testsuite/config-sub.data: Add tests.

2018-04-16  Mao Han  <han_mao@c-sky.com>

	* config.sub (csky, csky-*): Recognise.
	* testsuite/config-sub.data: Add a test case.

2018-04-16  Ben Elliston  <bje@gnu.org>

	* testsuite/config-sub.data: Sort.

2018-04-16  John Darrington  <john@darrington.wattle.id.au>

	* config.sub (s12z, hcs12z, m68hcs12z, m9s12z): New.
	* testsuite/config-sub.data: Add test cases.