@@ -1,12 +1,13 @@
-#!/bin/sh
+#!/bin/bash
 #
-# Copyright 2004, 2005, 2009, 2012, 2015 Free Software Foundation,
-# Inc.
+# Copyright 2004, 2005, 2009, 2012, 2015, 2018 Free Software
+# Foundation, Inc.
 # Contributed by Ben Elliston <bje@gnu.org>.
 #
 # This test reads 5-tuples from config-guess.data: the components of
 # the simulated uname(1) output and the expected GNU system triplet.
 
+set -eu
 verbose=false
 PATH=$(pwd):$PATH
 
@@ -29,7 +30,7 @@ run_config_guess()
 [ \$1 = -p ] && echo "@PROCESSOR@" && exit 0
 EOF
 	chmod +x uname
-	output=$(../config.guess 2>/dev/null)
+	output=$(sh -e ../config.guess 2>/dev/null)
 	if test $? != 0 ; then
 	    echo "FAIL: unable to guess $machine:$release:$system:$version"
 	    rc=1
